--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,8 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/travel-assist-portal
+# Local MongoDB
+# MONGODB_URI=mongodb://localhost:27017/travel-assist-portal
+# MongoDB Atlas (Cloud)
+MONGODB_URI=mongodb+srv://amitraj99053_db_user:<e4ez6aVY8X2CaDkC>@cluster0.fvrwsnx.mongodb.net/?appName=Cluster0
 JWT_SECRET=c605a711189f0e997df45e5a6d849c22
 NODE_ENV=development
 GOOGLE_MAPS_API_KEY=your_google_maps_api_key
