--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -15,8 +15,12 @@ COPY frontend/public ./public
 COPY frontend/tailwind.config.js ./
 
 # Build React app
-ENV REACT_APP_API_URL=https://api.yourdomain.com/api
-ENV REACT_APP_SOCKET_URL=https://api.yourdomain.com
+
+ARG REACT_APP_API_URL
+ARG REACT_APP_SOCKET_URL
+
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
+ENV REACT_APP_SOCKET_URL=$REACT_APP_SOCKET_URL
 ENV REACT_APP_ENV=production
 
 RUN npm run build
