--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/travel-assist-portal
-JWT_SECRET=c605a711189f0e997df45e5a6d849c22
-NODE_ENV=development
-GOOGLE_MAPS_API_KEY=your_google_maps_api_key
-WEATHER_API_KEY=https://api.open-meteo.com/v1/forecast?latitude=52.52&longitude=13.41&daily=sunrise,rain_sum,sunset,daylight_duration,sunshine_duration&hourly=temperature_2m,relative_humidity_2m,apparent_temperature,rain,showers,snowfall,visibility,wind_speed_10m,wind_speed_80m,weather_code&current=rain,weather_code,wind_speed_10m,wind_direction_10m,precipitation&timezone=auto
+MONGODB_URI=
+JWT_SECRET=
+NODE_ENV=
+GOOGLE_MAPS_API_KEY=
+WEATHER_API_KEY=
 JWT_EXPIRE=7d
 CORS_ORIGIN=http://localhost:3000
