--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,10 +2,12 @@ PORT=5000
 # Local MongoDB
 # MONGODB_URI=mongodb://localhost:27017/travel-assist-portal
 # MongoDB Atlas (Cloud)
-MONGODB_URI=mongodb+srv://amitraj99053_db_user:<e4ez6aVY8X2CaDkC>@cluster0.fvrwsnx.mongodb.net/?appName=Cluster0
-JWT_SECRET=c605a711189f0e997df45e5a6d849c22
+
+# Add your MongoDB Atlas connection string here
+MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.example.mongodb.net/?appName=Cluster0
+JWT_SECRET=your_jwt_secret_key
 NODE_ENV=development
 GOOGLE_MAPS_API_KEY=your_google_maps_api_key
-WEATHER_API_KEY=https://api.open-meteo.com/v1/forecast?latitude=52.52&longitude=13.41&daily=sunrise,rain_sum,sunset,daylight_duration,sunshine_duration&hourly=temperature_2m,relative_humidity_2m,apparent_temperature,rain,showers,snowfall,visibility,wind_speed_10m,wind_speed_80m,weather_code&current=rain,weather_code,wind_speed_10m,wind_direction_10m,precipitation&timezone=auto
+WEATHER_API_KEY=your_weather_api_key
 JWT_EXPIRE=7d
 CORS_ORIGIN=http://localhost:3000
